--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "scripts": {
     "dev": "rollup -w -c --configPlugin typescript",
-    "build": "rollup -c --configPlugin typescript"
+    "build": "rollup -c --configPlugin typescript",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "keywords": [
     "ls",
@@ -24,8 +27,10 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/node": "^18.11.15",
+    "@vitest/ui": "^0.25.8",
     "rollup": "^3.7.4",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.25.8"
   }
 }
